2003-10-25  Mohammad A. Haque  <batmanppc@users.sourceforge.net>

	* Engine.pm: Patch 828653 fix fink cleanup and improve user feedback
    
2003-10-25  Justin F. Hallett  <thesin@users.sourceforge.net

	* Service.pm: Added an get_path function that is a perl version
	of the command util which, you give it a file name and it returns
	the first match in the path of that file with it's full path.
	* PkgVersion.pm: Changed which call in for perl$version to use
	new get_path function.

2003-10-24  Benjamin Reed  <rangerrick@users.sourceforge.net

	* SelfUpdate.pm: Modify the rsync command to only remove
	CVS directories in trees that are updated through rsync.

2003-10-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* SelfUpdate.pm: Modify the "point" selfupdate method so that the
	version number information which it retrieves from the Fink
	website is specific to which distribution is the current one
	(e.g., whether we are running 10.2 or 10.2-gcc3.3).

2003-10-21  Justin F. Hallett  <thesin@users.sourceforge.net>

	* PkgVersion.pm: Fixed a problem with perlmodules where when
	PERL=<perlbinary> it would try and run ../<perlbinary> this is
	fixed by using the full path to <perlbinary>.

2003-10-20  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: Test for the presence of gcc 3.3, and the correct
	version of gcc 3.3, in order to decide between the 10.2 and
	10.2-gcc3.3 distributions.

2003-10-18  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm, Engine.pm, PkgVersion.pm, SelfUpdate.pm, Shlibs.pm:
	The shlibs code is giving trouble, so we move it to its own branch 
	again.  New branch is called "shlibs-20031018".

2003-10-18  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: Add an automatic dependency on the current version 
	of darwin, whenever building a package.  (This is so that packages
	which have MACSOX_DEPLOYMENT_TARGET set by default in 10.3, don't
	get built in 10.3 but then installed in 10.2 by accident.)
